# google_scholar_mcp

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
scholarly/: _proxy_generator.py  publication_parser.py
src/google_scholar_mcp/: __init__.py  __main__.py  search.py  server.py
src/google_scholar_mcp/scholarly/: _navigator.py  _proxy_generator.py  _scholarly.py  publication_parser.py
