[project]
name = "google_scholar_mcp"
version = "0.1.0"
description = "An MCP server for searching and retrieving articles from Google Scholar"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "bs4",
    "mcp",
    "arrow",
    "beautifulsoup4",
    "bibtexparser",
    "deprecated",
    "fake_useragent",
    "free-proxy",
    "httpx",
    "python-dotenv",
    "requests[socks]",
    "selenium",
    "stem",
]
