[project]
name = "google_scholar_mcp"
version = "0.1.1"
description = "An MCP server for searching and retrieving articles from Google Scholar"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "bs4",
    "mcp",
    "arrow",
    "beautifulsoup4",
    "bibtexparser",
    "deprecated",
    "fake_useragent",
    "free-proxy",
    "httpx",
    "python-dotenv",
    "requests[socks]",
    "selenium",
    "stem",
]

[project.scripts]
google_scholar_mcp = "google_scholar_mcp:main"
